--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -46,57 +46,21 @@ applications that are truly concurrent!
 
 <br><br>
 
-<div class="flex items-center justify-center">
-  <br><br>
-  <p class="text-3xl">Eruption<p>
-  <p class="text-4xl">|</p>
-  <p class="text-3xl">Hello world</p>
-</div>
-
-<br>
-<div class="container py-10 px-10 mx-0 min-w-full grid">
-    <p class="text-1xl text-center">This tutorial will guide you through creating a simple "Hello, World!" program in Erlava.</p><br>
-    <p> Erlava, inspired by Erlang, utilizes a slightly different syntax for module definitions and comments. 
-    Here's a breakdown of the key differences:</p>
-  <br>
-  <ul>
-    <li>
-      <b>-opt()</b> and </b>-doc()</b>: Erlava uses -opt() and -doc() annotations at the top level after 
-    the module declaration to specify module options and documentation, respectively.
-    </li>
-    <li>
-      <b>Entry Point</b>: The main function serves as the program's entry point.
-    </li>
-    <li>
-      <b>Formatting</b>: Erlava follows C-style formatting, using placeholders like %s for strings and %d for integers.
-    </li>
-  </ul>
-  <br>
-
-
-  <div class="p-1 shadow-xl flex h-full w-full place-self-center place-items-center bg-orange-100 col-span-2">
-    <pre class="language-erlang w-full">
-      <code class="language-erlang">
-  % This module defines a simple hello world program
-  -module(hello_world).
-
-  % Docstring explaining the module's functionality
-  -doc("This module prints 'Hello, World!' to the console.").
-
-  % Entry point of the program
-  main() ->
-    % Print "Hello, World!" to the console
-    io:writeln("Hello, World!").
-      </code>
-    </pre>
-  </div>
-</div>
-
+<div id="md"
+    hx-get="/hello"
+    hx-swap="outerHTML"
+    hx-trigger="load delay:0.1ms"></div>
 
 <div 
   class="p-5 grid grid-cols-9 mx-auto my-auto gap-5 items-center rounded-md shadow-sm">
-  <button class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">One</button>
-  <button class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Two</button>
+  <button 
+    hx-post="/hello"
+    hx-target="#md"
+    class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Hello</button>
+  <button 
+    hx-post="/literals"
+    hx-target="#md"
+    class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Literals</button>
   <button class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Three</button>
   <button class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Four</button>
   <button class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Five</button>
