index: Use the default endpoint

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <i class="fa-solid fa-volcano"></i>
               Erlava</a></li>
 				<li
-          hx-get="/tutorial"
+          hx-get="/tutorials"
           hx-target="#main"
           hx-swap="outerHTML swap:1s"
               class="md:px-4 md:py-2 hover:text-orange-400"><a href="#">
