tutorials: Add different tutorials

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -61,6 +61,10 @@ applications that are truly concurrent!
     hx-post="/literals"
     hx-target="#md"
     class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Literals</button>
+  <button 
+    hx-post="/functions"
+    hx-target="#md"
+    class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Functions</button>
   <button class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Three</button>
   <button class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Four</button>
   <button class="bg-gray-100 hover:bg-gray-50 text-white-200 rounded-xl">Five</button>
