--- a/tutorials/literals.html
+++ b/tutorials/literals.html
@@ -11,8 +11,7 @@
   be changed during program execution. They serve as building blocks for more complex data structures and expressions.</p>
   <br>
 
-
-  <p class="text-1xl">Integer Literals</p>
+  <p class="text-1xl">Numeric</p>
 
   <div class="p-1 shadow-xl flex h-full w-full place-self-center place-items-center bg-orange-100 col-span-2">
     <pre class="language-erlang w-full">
@@ -23,5 +22,69 @@
       </code>
     </pre>
   </div>
+
+  <p class="text-1xl">Atoms</p>
+
+  <div class="p-1 shadow-xl flex h-full w-full place-self-center place-items-center bg-orange-100 col-span-2">
+    <pre class="language-erlang w-full">
+      <code class="language-erlang">
+        hello world %% An atom is any word starting with a lowercase alphabetic symbol
+        these are also atoms %% :)
+      </code>
+    </pre>
+  </div>
+
+  <p class="text-1xl">Boolean</p>
+
+  <div class="p-1 shadow-xl flex h-full w-full place-self-center place-items-center bg-orange-100 col-span-2">
+    <pre class="language-erlang w-full">
+      <code class="language-erlang">
+        true false %% Look closely, they are actually just atoms.
+      </code>
+    </pre>
+  </div>
+
+  <p class="text-1xl">String</p>
+
+  <div class="p-1 shadow-xl flex h-full w-full place-self-center place-items-center bg-orange-100 col-span-2">
+    <pre class="language-erlang w-full">
+      <code class="language-erlang">
+        "Hello, world" %% Strings are similar to other languages, especially java.
+      </code>
+    </pre>
+  </div>
+
+  <p class="text-1xl">Lists</p>
+
+  <div class="p-1 shadow-xl flex h-full w-full place-self-center place-items-center bg-orange-100 col-span-2">
+    <pre class="language-erlang w-full">
+      <code class="language-erlang">
+        [1,2,3,4] %% List can be of any type
+        [list, of, atoms] %% ^^
+        [] %% Empty list
+      </code>
+    </pre>
+  </div>
+
+  <p class="text-1xl">Map</p>
+
+  <div class="p-1 shadow-xl flex h-full w-full place-self-center place-items-center bg-orange-100 col-span-2">
+    <pre class="language-erlang w-full">
+      <code class="language-erlang">
+        #{"foo" -> bar, "baz" -> foo} %% This creates a reference, more on those later.
+      </code>
+    </pre>
+  </div>
+
+  <p class="text-1xl">Instance</p>
+
+  <div class="p-1 shadow-xl flex h-full w-full place-self-center place-items-center bg-orange-100 col-span-2">
+    <pre class="language-erlang w-full">
+      <code class="language-erlang">
+        @Foo {Bar = bar} %% This also returns a reference.
+      </code>
+    </pre>
+  </div>
+
 </div>
 
