the site is now complete.

--- a/download.html
+++ b/download.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>VolcanoDocs - Volcanic Documentation Platform</title>
+    <title>Erlava | Download</title>
+    <link rel="icon" href="./img/logo.png" type="image/icon type">
     <style>
   body {
     font-family: 'Georgia', serif;
@@ -107,17 +108,23 @@
     line-height: 40%;
   }
 
+  #dls > a {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
     </style>
   </head>
 <body>
   <nav>
+    <img src="./img/logo.png" width="30%"/>
     <h1>[Erlava | Programming | Language]</h1>
     <ul>
       <li><a class="nav-hover" href="./index.html">Introduction</a></li>
       <li><a class="nav-hover" href="./download.html">Download</a></li>
-      <li><a class="nav-hover" href="#">Tools</a></li>
-      <li><a class="nav-hover" href="#troubleshooting">Troubleshooting</a></li>
-      <li><a class="nav-hover" href="#community">Community</a></li>
+      <li><a class="nav-hover" href="./users.html">Users</a></li>
+      <li><a class="nav-hover" href="./troubleshooting.html">Troubleshooting</a></li>
+      <li><a class="nav-hover" href="./community.html">Community</a></li>
     </ul>
   </nav>
   
@@ -160,8 +167,18 @@
     </div>
 
     <h2>Download Links</h2>
-    <p>Source Forge</p>
-    <p>Git hosted</p>
-    <p>Locally hosted on this server</p>
+    <div id="dls">
+      <a href="https://sourceforge.net/p/erlava/">
+          <img alt="Download erlava" src="https://sourceforge.net/sflogo.php?type=17&amp;group_id=3777915" width=200>
+      </a>
+      <a href="https://github.com/hexaredecimal/Erlava/releases/tag/0.2.1">
+        <img alt="Download" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" width="50" />
+      </a>
+      <a href="./downloads/erlava.jar">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/markdown/markdown-original.svg" width="50"/>
+      </a>
+    </div>
+
+
   </main>
 </body></html>
