--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>VolcanoDocs - Volcanic Documentation Platform</title>
+    <title>Erlava | Introduction </title>
+    <link rel="icon" href="./img/logo.png" type="image/icon type">
     <style>
   body {
     font-family: 'Georgia', serif;
@@ -104,9 +105,9 @@
     <ul>
       <li><a class="nav-hover" href="./index.html">Introduction</a></li>
       <li><a class="nav-hover" href="./download.html">Download</a></li>
-      <li><a class="nav-hover" href="#">Tools</a></li>
-      <li><a class="nav-hover" href="#troubleshooting">Troubleshooting</a></li>
-      <li><a class="nav-hover" href="#community">Community</a></li>
+      <li><a class="nav-hover" href="./users.html">Users</a></li>
+      <li><a class="nav-hover" href="./troubleshooting.html">Troubleshooting</a></li>
+      <li><a class="nav-hover" href="./community.html">Community</a></li>
     </ul>
   </nav>
   
@@ -146,21 +147,5 @@
     </ul>
 
 
-    
-    <h2 id="api-reference">Uses</h2>
-    <p>TODOLOOOO: make a page for this</p> 
-
-
-    <h2 id="troubleshooting">Troubleshooting</h2>
-    <p>Encountering issues with your volcanic studies? Check out our troubleshooting guide or reach out to our community forums for assistance.</p>
-    
-    <h2 id="community">Join the VolcanoDocs Community</h2>
-    <p>Connect with fellow volcano enthusiasts, share your research, and stay updated on the latest in volcanology:</p>
-    <ul>
-      <li><a href="https://forum.volcanodocs.com">Wiki</a></li>
-      <li><a href="https://forum.volcanodocs.com">Reddit</a></li>
-      <li><a href="https://chat.volcanodocs.com">Discord</a></li>
-      <li><a href="https://twitter.com/VolcanoDocs">Twitter</a></li>
-    </ul>
   </main>
 </body></html>
