added the comminity links

--- a/community.html
+++ b/community.html
@@ -122,9 +122,9 @@
     </p>
     <ul>
       <li><a href="/">Wiki</a></li>
-      <li><a href="/">Reddit</a></li>
-      <li><a href="/">Discord</a></li>
-      <li><a href="/">Twitter</a></li>
+      <li><a href="https://www.reddit.com/r/Erlava/">Reddit</a></li>
+      <li><a href="https://discord.gg/byqCgCd7">Discord</a></li>
+      <li><a href="https://x.com/erlavalang">Twitter</a></li>
     </ul>
     
 
